@@ -16,8 +16,9 @@ importFromUrlTitle=Introdueix l'URL
 importFromUrlText=Introdueix l'URL des del qual vols importar la llista de substitució
 nonSupportedProtocol=Protocol no suportat
 invalidSubscriptionUrl=L'URL de subscripció no és vàlid
-onlyHttp=Només l'HTTP està suportat.
 httpError=Error d'HTTP
 cantConnectToServerTitle=No es pot connectar amb el servidor
 cantConnectToServerText=No es pot connectar amb el servidor especificat a l'URL %S
+fileNotFoundTitle=No s'ha trobat el fitxer
+fileNotFoundText=No s'ha trobat el fitxer %S
 unexpectedError=Error inesperat
